actor card text overflow fix

--- a/src/components/components/ActorCard/ActorCard.css
+++ b/src/components/components/ActorCard/ActorCard.css
@@ -67,6 +67,12 @@
     line-height: 1.2em;
     font-weight: 400;
     text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    line-clamp: 4;
+    -webkit-box-orient: vertical;
 }
 
 @media screen and (max-width: 1023px) {
